# olaris-a41

./: .gitignore  LICENSE  README.md  docopts.md  opsfile.yml  prereq.yml  stream.py
ai/: chat.py  docopts.md  opsfile.yml
cli/: .gitignore  README.md  pyproject.toml  pyproject.toml.old  requirements.txt
cli/profile_default/: ipython_config.py
cli/profile_default/startup/: 00-chdir.ipy  01-opsenv.py
etc/: opsfile.yml
finetune/: .gitignore  __main__.py  docopts.md  finetune.py  opsfile.yml  pyproject.toml
imp/: common.py  file.txt  opsfile.yml  pyproject.toml
imp/finetune/: docopts.md  opsfile.yml  qagen.py
imp/gdocs/: __main__.py  docopts.md  download.py  importer.py  list.py  opsfile.yml  parse.py
imp/gmail/: docopts.md  opsfile.yml
imp/text/: __main__.py  csvimp.py  dirimp.py  docopts.md  opsfile.yml
lesson/: README.md  lesson.py  pyproject.toml
mcp/: docopts.md  opsfile.yml
mcp/mcproxy/: common.py  generator.py  install.py  pyproject.toml  sse.py
mcp/mcproxy/kubernetes/: deployment.yaml  ingress-nginx.yaml  ingress-traefik.yaml  service.yaml
mcproxy/: INFO.md  common.py  generator.py  package.json
new/: main.py  pyproject.toml
pg/: docopts.md  main.py  opsfile.yml  pyproject.toml
sv/: CLAUDE.md  opsfile.yml  setup.py  workspace.code-workspace
