[project]
name = "imp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.170.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "python-docs>=0.1.0",
    "python-docx>=1.1.2",
    "tika>=3.1.0",
]
